welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:21: error: Invalid literal number
	for (compteur <- 1to 6){
                         ^Program:21: error: illegal start of simple expression
	for (compteur <- 1to 6){
                         ^Program:32: error: ')' expected but '}' found.
  }
  ^